--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "lucide-react": "^0.468.0",
     "motion": "^11.17.0",
     "react": "^18.3.1",
+    "react-aria-components": "^1.6.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
